Bug 1611949 - Avoid swipe navigation when APZ can scroll a pan gesture. r=botond,hiro

APZ already performs a transform-aware scrollability check for pan gestures, but
ESM later decides whether the generated wheel event can trigger swipe navigation
using the raw wheel delta.

For rotated scrollable content, this can make ESM fail to find the actual scroll
target and treat the event as viewport overscroll, causing swipe-to-navigate to
fire even though APZ can scroll the target.

Pass APZ's horizontal scrollability decision through APZEventResult, and avoid
marking the generated wheel event as swipe-triggering when APZ has determined
that the target can scroll horizontally for the pan gesture.

Differential Revision: https://phabricator.services.mozilla.com/D299935